[package]
name = "symbolproxy"
version = "1.0.0"
authors = ["Filip Kofron <filip.kofron.cz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7", features = ["async-std"] }
chrono = "0.4"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "sqlite" ] }
log = "0.4.20"
log4rs = "1.2.0"
